# friendorfoe

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.ar.md  README.az.md  README.fa.md  README.he.md  README.hy.md  README.ka.md  README.ku.md  README.md  README.ps.md  README.tk.md  README.tr.md  README.uk.md  README.ur.md  SECURITY.md  facebook.md  reddit.md  x.md
.github/workflows/: android-build.yml  backend-tests.yml  esp32-web-flasher.yml
android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  requirements.txt
docs/: ARCHITECTURE.md  BAYESIAN_FUSION.md  THREAT_MODEL.md  TRIANGULATION.md  badge_scanner_recovery.md  fof_badge_notes.md  release-checklist.md  tdd-live-playbook.md  wiring-diagram.html
esp32/: .gitignore  CHANGELOG.md  INSTALL.md  PARITY.md  flash.sh  platformio.ini  update_legacy_nodes.sh
esp32/ble-scanner/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
esp32/ble-scanner/main/comms/: console_output.c  console_output.h
esp32/ble-scanner/main/core/: task_priorities.h
esp32/ble-scanner/main/detection/: wifi_privacy_scanner.c  wifi_privacy_scanner.h
esp32/ble-scanner/main/hw/: led_status.c  led_status.h  oled_display.c  oled_display.h
esp32/scanner/main/: CMakeLists.txt  Kconfig.projbuild  main.c
esp32/scanner/main/comms/: uart_ota.c  uart_ota.h  uart_tx.c  uart_tx.h
esp32/scanner/main/core/: calibration_mode.c  calibration_mode.h  scanner_rollback.c  scanner_rollback.h  task_priorities.h
esp32/scanner/main/detection/: bayesian_fusion.c  bayesian_fusion.h  ble_fingerprint.c  ble_fingerprint.h  ble_ja3.c  ble_ja3.h  ble_remote_id.c  ble_remote_id.h  dji_drone_id_parser.c  dji_drone_id_parser.h  french_dri_parser.c  french_dri_parser.h  glasses_detector.c  glasses_detector.h  open_drone_id_parser.c  open_drone_id_parser.h  wifi_beacon_rid_parser.c  wifi_beacon_rid_parser.h  wifi_oui_database.c  wifi_oui_database.h  wifi_scanner.c  wifi_scanner.h  wifi_ssid_patterns.c  wifi_ssid_patterns.h
esp32/scanner/main/hw/: led_status.c  led_status.h  oled_display.c  oled_display.h
esp32/uplink/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
esp32/uplink/main/comms/: http_upload.c  http_upload.h  uart_rx.c  uart_rx.h  wifi_sta.c  wifi_sta.h
esp32/uplink/main/core/: badge_ble_control.c  badge_ble_control.h  badge_display_policy_runtime.c  badge_display_policy_runtime.h  badge_mode.c  badge_mode.h  badge_runtime.c  badge_runtime.h  badge_theme_runtime.c  badge_theme_runtime.h  config.h  nvs_config.c  nvs_config.h  ring_buffer.c  ring_buffer.h  serial_config.c  serial_config.h  wifi_credentials.h.example
esp32/uplink/main/hw/: battery.c  battery.h  display_st7735.c  gps.c  gps.h  led_status.c  led_status.h  oled_display.c  oled_display.h
esp32/uplink/main/network/: fw_auto_check.c  fw_auto_check.h  fw_store.c  fw_store.h  http_status.c  http_status.h  time_sync.c  time_sync.h  wifi_ap.c  wifi_ap.h
macos/: Package.swift
scripts/: android_calibrate_smoke.sh  download_aircraft_photos.py  download_drone_photos.py  fof_badge_debug_bridge.py  fof_badge_flash.py  fof_flash.local.json.example  fof_flash.py  gate_canary_flash.py  preflight.py  test_fof_badge_debug_bridge.py  test_fof_badge_flash.py  test_recover_fof_badge.py  update_oui.py  update_rf_reference_data.py
(+381 files in other folders)
